[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pymongo = "^4.8.0"
motor = "^3.5.1"
pytest = "^8.3.2"
httpx = "^0.27.0"
jose = "^1.0.0"
passlib = "^1.7.4"
PyJWT = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
